syntax = "proto3";
package users_service;

message User {
  string username = 1;
}

message UserGetByIdRequest {
  string id = 1;
}

message UserGetByIdResponse {
  User user = 1;
}

service UsersService {
  rpc GetById(UserGetByIdRequest) returns (UserGetByIdResponse);
}